--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     async function fetchData() {
       try {
-        const response = await fetch('data.json');
+        const response = await fetch('https://raw.githubusercontent.com/jaaaypatel1/PricesForProceduresWebsite/main/data.json');
         const data = await response.json();
         return data;
       } catch (error) {
