--- a/index.html
+++ b/index.html
@@ -99,51 +99,48 @@
     const resultCount = document.getElementById('resultCount'); // Result count element
 
     async function fetchData() {
-      try {
-        const response = await fetch('data.json');
-        const data = await response.json();
-        return data;
-      } catch (error) {
-        console.error('Error fetching data:', error);
-        return [];
-      }
-    }
+  try {
+    const response = await fetch('data_optimized.json');
+    const data = await response.json();
+    return data;
+  } catch (error) {
+    console.error('Error fetching data:', error);
+    return {};
+  }
+}
 
-    function formatAddress(address) {
-      // Check if address is a string or an array of strings
-      if (Array.isArray(address)) {
-        return address.join('<br>');  // Join array elements with a line break
-      } else {
-        return address;  // Return the string as is
-      }
-    }
+async function displayResults(query) {
+  resultsTableBody.innerHTML = '';
+  resultCount.textContent = 'Results found: 0';
 
-    async function displayResults(query) {
-      // Clear previous results
-      resultsTableBody.innerHTML = '';
-      resultCount.textContent = 'Results found: 0'; // Reset result count
+  const data = await fetchData();
+  if (!data.charges) return;
 
-      const data = await fetchData();
+  const filteredResults = data.charges.filter(item =>
+    item.desc.toLowerCase().includes(query.toLowerCase())
+  );
 
-      // Filter results based on query
-      const filteredResults = data.filter(item =>
-        item.description.toLowerCase().includes(query.toLowerCase()) ||
-        item.hospital_name.toLowerCase().includes(query.toLowerCase()) ||
-        (typeof item.hospital_address === 'string'
-          ? item.hospital_address.toLowerCase().includes(query.toLowerCase())  // If it's a string
-          : item.hospital_address.some(address => address.toLowerCase().includes(query.toLowerCase()))  // If it's an array
-        )
-      );
+  resultCount.textContent = `Results found: ${filteredResults.length}`;
 
-      // Update result count
-      resultCount.textContent = `Results found: ${filteredResults.length}`;
+  filteredResults.forEach(item => {
+    const row = document.createElement('tr');
+    row.innerHTML = `
+      <td>${data.hospital.name}</td>
+      <td>${data.hospital.addr}</td>
+      <td>${item.desc}</td>
+      <td>${item.cost !== undefined ? `$${item.cost.toFixed(2)}` : 'N/A'}</td>
+      <td>${item.billing || 'N/A'}</td>
+      <td>${item.notes || 'N/A'}</td>
+      <td>${item.type || 'N/A'}</td>
+    `;
+    resultsTableBody.appendChild(row);
+  });
 
-      // Hide or show the table header based on results
-      if (filteredResults.length === 0) {
-        resultsTableHeader.style.display = 'none'; // Hide header if no results
-      } else {
-        resultsTableHeader.style.display = ''; // Show header if there are results
-      }
+  if (filteredResults.length === 0) {
+    resultsTableBody.innerHTML = `<tr><td colspan="7">No results found for "${query}"</td></tr>`;
+  }
+}
+
 
       // Populate the table with filtered results
       filteredResults.forEach(item => {
@@ -167,7 +164,7 @@
         row.innerHTML = `<td colspan="8">No results found for "${query}"</td>`;
         resultsTableBody.appendChild(row);
       }
-    }
+    
 
     // Event listener for form submission
     searchForm.addEventListener('submit', (event) => {
