--- a/index.html
+++ b/index.html
@@ -109,37 +109,48 @@
   }
 
   async function displayResults(query) {
-    resultsTableBody.innerHTML = '';
-    resultCount.textContent = 'Results found: 0';
+  resultsTableBody.innerHTML = ''; 
+  resultCount.textContent = 'Results found: 0';
 
-    const data = await fetchData();
-    if (!data.charges) return;
+  const data = await fetchData();
+  if (!data.hospitals) return; // Ensure 'hospitals' exists in JSON
 
-    const filteredResults = data.charges.filter(item =>
+  let totalResults = 0; // Count results across all hospitals
+
+  data.hospitals.forEach(hospital => {
+    const hospitalName = hospital.name;
+    const hospitalAddress = hospital.addr;
+
+    // Filter charges for this hospital
+    const filteredCharges = hospital.charges.filter(item =>
       item.desc.toLowerCase().includes(query.toLowerCase())
     );
 
-    resultCount.textContent = `Results found: ${filteredResults.length}`;
+    totalResults += filteredCharges.length; // Update total results
 
-    // Loop over filtered results and add rows to the table
-    filteredResults.forEach(item => {
+    filteredCharges.forEach(item => {
       const row = document.createElement('tr');
       row.innerHTML = `
-        <td>${data.name}</td>
-        <td>${data.addr}</td>
+        <td>${hospitalName}</td>
+        <td>${hospitalAddress}</td>
         <td>${item.desc}</td>
         <td>${item.cost !== undefined ? `$${item.cost.toFixed(2)}` : 'N/A'}</td>
+        <td>${item.discounted_cash || 'N/A'}</td>
         <td>${item.billing || 'N/A'}</td>
         <td>${item.notes || 'N/A'}</td>
         <td>${item.type || 'N/A'}</td>
       `;
       resultsTableBody.appendChild(row);
     });
+  });
 
-    if (filteredResults.length === 0) {
-      resultsTableBody.innerHTML = `<tr><td colspan="7">No results found for "${query}"</td></tr>`;
-    }
+  resultCount.textContent = `Results found: ${totalResults}`;
+
+  if (totalResults === 0) {
+    resultsTableBody.innerHTML = `<tr><td colspan="8">No results found for "${query}"</td></tr>`;
   }
+}
+  
 
   searchForm.addEventListener('submit', (event) => {
     event.preventDefault();
