--- a/about_us.html
+++ b/about_us.html
@@ -6,6 +6,12 @@
   <title>About Us - Prices For Procedures</title>
   <link rel="stylesheet" href="main.css">
   <style>
+    body {
+      background-color: #ffffff;
+      color: #333;
+      font-family: Arial, sans-serif;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
@@ -14,12 +20,14 @@
 
     th, td {
       border: 1px solid #ddd;
-      padding: 8px;
+      padding: 12px;
       text-align: left;
+      font-size: 18px;
     }
 
     th {
-      background-color: #f4f4f4;
+      background-color: #ffffff;
+      color: rgb(0, 0, 0);
     }
 
     .about-section {
@@ -37,25 +45,49 @@
     }
 
     h2 {
-      text-align: center;
+      font-size: 26px;
+      color: rgb(33, 33, 33);
+      margin-bottom: 20px;
     }
 
     header {
       display: flex;         
       justify-content: space-between;
       align-items: center;  
-      padding: 20px;
+      padding: 5px;
+    }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+    }
+
+    .header-logo {
+      width: 100px; 
+      height: 100px;
+      margin-right: 0px;
+    }
+
+    .header-title {
+      font-size: 32px; /* Bigger text */
+      color: white;
+      text-decoration: none;
+    }
+
+    .header-title:hover {
+      text-decoration: underline;
     }
 
     .header-link { 
-    color:rgb(255, 255, 255);  
-    font-size: 16px;
-    padding: 20px;
+      color: white;  
+      font-size: 20px;
+      padding: 20px;
     }
 
     .header-link:hover {
-      text-decoration: underline;  /* Underline the link on hover */
-      color:rgb(140, 140, 140);              /* Change the color when hovered (optional) */
+      text-decoration: underline;  
+      color: #ffffff;
     }
 
     footer {
@@ -63,13 +95,15 @@
       margin-top: 40px;
     }
 
-
   </style>
 </head>
 <body>
   <header>
-    <h1>Prices For Procedures</h1>
-    <a href="index.html" class="header-link">Home</a> <!-- Link in top-right -->
+    <a href="index.html" class="header-content">
+      <img src="logo.png" alt="Website Logo" class="header-logo">
+      <h1 class="header-title">Prices For Procedures</h1>
+    </a>
+    <a href="index.html" class="header-link">Home</a>
   </header>
 
   <main>
